# FrameChanger

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: workflow.yml
framechanger/: app.py  wallpaper_changer.py
scripts/: build_exe.sh
src/framechanger/: app.py  logging_utils.py  paths.py  stylesheets.py  wallpaper_changer.py
tests/: test_wallpaper_changer.py
